sort.dutchflag.lessons.sort.dutchflag.DutchFlagAlgo.scala.error
DutchFlagAlgo:12: error: not found: value rouge
  while(getCouleur(c) != rouge){
                         ^