sort.dutchflag.lessons.sort.dutchflag.DutchFlagAlgo.scala.code
def solve() {
  var bleu = 0
  var blanc = getTaille - 1
  var blancRouge = getTaille() - 1
  var c = 0
  while(getCouleur(c) != bleu){
    c = c+1 
  }
  echange(0,c)
  c = getTaille() - 1
  while(getCouleur(c) != rouge){
    c = c-1
  }
  echange(getTaille()-1,c)
}